Final public version.

--- a/MMSCaseNonFullySmoothPol_cpcsH2_TclcdH3_reghcstriple_convergence_study.ipynb
+++ b/MMSCaseNonFullySmoothPol_cpcsH2_TclcdH3_reghcstriple_convergence_study.ipynb
@@ -17,11 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "4293b143",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add \"src/\" to the Python path to import project modules\n",
+    "import sys\n",
+    "sys.path.append('src')\n",
+    "\n",
     "# Import required libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
